--- a/appsettings.json
+++ b/appsettings.json
@@ -5,13 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "Kestrel": {
-    "EndPoints": {
-      "Http": {
-        "Url": "http://localhost:3022" 
-      }
-    }
-  }
+  "AllowedHosts": "*"
 }
-
